# ContextBridge

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
contextbridge-core/: Cargo.toml
contextbridge-core/src/: lib.rs
contextbridge-mcp/: Cargo.toml
contextbridge-mcp/src/: db.rs  main.rs  server.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md
docs/ADR/: 001-tauri-v2.md  002-sqlite-over-postgres.md  003-rust-mcp-server.md  004-fts5-over-tantivy.md
docs/phases/: phase1-completed.md  phase2-completed.md  phase3-completed.md  phase4-completed.md  phase5-completed.md
scripts/: generate-icons.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: context.rs  mod.rs  projects.rs  settings.rs
src-tauri/src/core/: context_engine.rs  git_analyzer.rs  mod.rs  project_scanner.rs  sync.rs  watcher.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  queries.rs
src-tauri/src/engine/: context_engine.rs  git_analyzer.rs  project_scanner.rs  sync.rs  watcher.rs
src-tauri/src/output/: claude.rs  codex.rs  copilot.rs  cursor.rs  format.rs  mod.rs
src-tauri/tests/: context_engine_tests.rs  db_tests.rs  formatter_tests.rs  git_tests.rs  scanner_tests.rs  sync_tests.rs
src/components/: ErrorBoundary.tsx
src/components/layout/: MainContent.tsx  Sidebar.tsx
src/components/projects/: EmptyState.tsx  ProjectCard.tsx
src/components/ui/: Badge.tsx  BridgeIcon.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  OnboardingGuide.tsx  Skeleton.tsx  SplashScreen.tsx  Tab.tsx  TitleBar.tsx  Toggle.tsx  ToolLogo.tsx  UpdateChecker.tsx
src/hooks/: useAddProject.ts
src/lib/: datetime.ts  tauri.ts
src/pages/: Dashboard.tsx  ProjectDetail.tsx  Settings.tsx
src/stores/: navigationStore.ts  projectStore.ts  settingsStore.ts
src/styles/: globals.css
src/test/: App.test.tsx
src/test/hooks/: useAddProject.test.ts
src/test/lib/: datetime.test.ts
src/test/pages/: Dashboard.test.tsx  (+1 more)
src/types/: index.ts
(+8 files in other folders)
