[package]
name = "contextbridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ContextBridge — AI-aware project context manager (Tauri app)"

[lib]
name = "contextbridge_lib"
path = "src/lib.rs"

[[bin]]
name = "contextbridge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6"
walkdir = "2"
git2 = "0.20"
glob = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
dirs = "5"
contextbridge-core = { path = "../contextbridge-core" }

[dev-dependencies]
tempfile = "3"
